accordion align fixes

--- a/src/client/scss/vmware/components/collapse-box.scss
+++ b/src/client/scss/vmware/components/collapse-box.scss
@@ -25,7 +25,7 @@
 		  }
 			 :nth-child(2){
 				>div{
-						padding: 0 15px;
+						padding: 0 11px;
 				}
 			 }
 		  ul{
